runs/2025-02-28-13-08-23/logs/SAIGEgds/build-success.log
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://p3m.dev/cran/__linux__/noble/latest
Bioconductor version 3.20 (BiocManager 1.30.25), R 4.4.2 (2024-10-31)
Installing package(s) 'SAIGEgds'
also installing the dependencies ‘prismatic’, ‘paletteer’, ‘ggmanh’

trying URL 'https://p3m.dev/cran/__linux__/noble/latest/src/contrib/prismatic_1.1.2.tar.gz'
Content type 'binary/octet-stream' length 741397 bytes (724 KB)
==================================================
downloaded 724 KB

trying URL 'https://p3m.dev/cran/__linux__/noble/latest/src/contrib/paletteer_1.6.0.tar.gz'
Content type 'binary/octet-stream' length 436089 bytes (425 KB)
==================================================
downloaded 425 KB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/ggmanh_1.10.0.tar.gz'
Content type 'application/x-gzip' length 4442390 bytes (4.2 MB)
==================================================
downloaded 4.2 MB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/SAIGEgds_2.6.0.tar.gz'
Content type 'application/x-gzip' length 2072695 bytes (2.0 MB)
==================================================
downloaded 2.0 MB

* installing *binary* package ‘prismatic’ ...
* ‘prismatic’ was already a binary package and will not be rebuilt
* creating tarball
packaged installation of ‘prismatic’ as ‘prismatic_1.1.2_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (prismatic)
* installing *source* package ‘SAIGEgds’ ...
** package ‘SAIGEgds’ successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C++ compiler: ‘g++ (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
using C++11
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG -DARMA_64BIT_WORD=1 -I'/usr/local/lib/R/site-library/Rcpp/include' -I'/mnt/library/RcppArmadillo/include' -I'/mnt/library/RcppParallel/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c SPATest.cpp -o SPATest.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG -DARMA_64BIT_WORD=1 -I'/usr/local/lib/R/site-library/Rcpp/include' -I'/mnt/library/RcppArmadillo/include' -I'/mnt/library/RcppParallel/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c saige_fitnull.cpp -o saige_fitnull.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG -DARMA_64BIT_WORD=1 -I'/usr/local/lib/R/site-library/Rcpp/include' -I'/mnt/library/RcppArmadillo/include' -I'/mnt/library/RcppParallel/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c saige_main.cpp -o saige_main.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG -DARMA_64BIT_WORD=1 -I'/usr/local/lib/R/site-library/Rcpp/include' -I'/mnt/library/RcppArmadillo/include' -I'/mnt/library/RcppParallel/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c saige_misc.cpp -o saige_misc.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG -DARMA_64BIT_WORD=1 -I'/usr/local/lib/R/site-library/Rcpp/include' -I'/mnt/library/RcppArmadillo/include' -I'/mnt/library/RcppParallel/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c vec_ext_avx2.cpp -o vec_ext_avx2.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG -DARMA_64BIT_WORD=1 -I'/usr/local/lib/R/site-library/Rcpp/include' -I'/mnt/library/RcppArmadillo/include' -I'/mnt/library/RcppParallel/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c vec_ext_avx512bw.cpp -o vec_ext_avx512bw.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG -DARMA_64BIT_WORD=1 -I'/usr/local/lib/R/site-library/Rcpp/include' -I'/mnt/library/RcppArmadillo/include' -I'/mnt/library/RcppParallel/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c vec_ext_def.cpp -o vec_ext_def.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG -DARMA_64BIT_WORD=1 -I'/usr/local/lib/R/site-library/Rcpp/include' -I'/mnt/library/RcppArmadillo/include' -I'/mnt/library/RcppParallel/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c vectorization.cpp -o vectorization.o
vectorization.cpp: In function ‘SEXPREC* saige_simd_version()’:
vectorization.cpp:118:16: error: ‘mkString’ was not declared in this scope; did you mean ‘Rf_mkString’?
  118 |         return mkString(buffer);
      |                ^~~~~~~~
      |                Rf_mkString
vectorization.cpp: In function ‘SEXPREC* saige_simd_sp_grm()’:
vectorization.cpp:129:16: error: ‘mkString’ was not declared in this scope; did you mean ‘Rf_mkString’?
  129 |         return mkString(s);
      |                ^~~~~~~~
      |                Rf_mkString
make: *** [/usr/local/lib/R/etc/Makeconf:204: vectorization.o] Error 1
ERROR: compilation failed for package ‘SAIGEgds’
* removing ‘/mnt/library/SAIGEgds’
* installing *binary* package ‘paletteer’ ...
* ‘paletteer’ was already a binary package and will not be rebuilt
* creating tarball
packaged installation of ‘paletteer’ as ‘paletteer_1.6.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (paletteer)
* installing *source* package ‘ggmanh’ ...
** package ‘ggmanh’ successfully unpacked and MD5 sums checked
** using staged installation
** R
** inst
** byte-compile and prepare package for lazy loading
in method for ‘binned_manhattan_plot’ with signature ‘"GRanges"’: no definition for class “GRanges”
in method for ‘binned_manhattan_preprocess’ with signature ‘"GRanges"’: no definition for class “GRanges”
in method for ‘manhattan_plot’ with signature ‘"GRanges"’: no definition for class “GRanges”
in method for ‘manhattan_data_preprocess’ with signature ‘"GRanges"’: no definition for class “GRanges”
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘ggmanh’ as ‘ggmanh_1.10.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (ggmanh)

The downloaded source packages are in
	‘/tmp/RtmpB1Qafj/downloaded_packages’
Old packages: 'bslib', 'cli', 'curl', 'evaluate', 'httr2', 'jsonlite',
  'openssl', 'pillar', 'pkgbuild', 'processx', 'ps', 'purrr', 'R6', 'Rcpp',
  'rlang', 'sessioninfo', 'systemfonts', 'testthat', 'textshaping', 'tinytex',
  'xfun', 'zip', 'class', 'foreign', 'KernSmooth', 'MASS', 'Matrix', 'nlme',
  'nnet', 'rpart', 'spatial'
Warning message:
In install.packages(...) :
  installation of package ‘SAIGEgds’ had non-zero exit status
Error: unexpected 'else' in "  else"
Execution halted

real	56m57.175s
user	0m50.988s
sys	0m9.034s
